# jobpilot

./: .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  LICENSE  README.md  profile.example.yaml  pyproject.toml
.github/workflows/: ci.yml  daily.yml  secrets-check.yml
docs/: adding-a-source.md  notion.md
scripts/: install-hooks.sh  pre-commit
src/jobpilot/: __init__.py  __main__.py  _errors.py  _jd_fetch.py  _safe_http.py  apply.py  cli.py  config.py  filters.py  models.py  notion_sink.py  pipeline.py  score.py  tailor.py
src/jobpilot/sources/: __init__.py  ats_boards.py  base.py  hackernews.py  ycombinator.py
tests/: conftest.py  test_apply.py  test_ats_boards.py  test_config.py  test_errors.py  test_filters.py  test_hackernews.py  test_notion_sink.py  test_pipeline.py  test_safe_http.py  test_score.py  test_tailor.py
