[project]
name = "jobpilot"
version = "0.1.0"
description = "Daily AI-curated job shortlist + tailored applications. Open-source."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "notion-client>=2.2.1",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-vcr>=1.0.2",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "freezegun>=1.5.0",
    "respx>=0.21.0",
]

[project.scripts]
jobpilot = "jobpilot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobpilot"]

[tool.pytest.ini_options]
markers = [
    "unit: pure-logic tests, no external deps (default for PR gate)",
    "replay: tests with recorded fixtures, no live calls (default for PR gate)",
    "live: tests against live APIs (nightly only, opt-in via env)",
]
addopts = "-m 'unit or replay'"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/jobpilot/cli.py" = ["B008"]  # Typer requires call-in-default for Argument/Option

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/jobpilot"]
